rust/src/tests/errors/eperm.rs
#[cfg(target_os = "freebsd")]
mod flag;
